--- a/semana2/bugfixes/semana-aula1/index.css
+++ b/semana2/bugfixes/semana-aula1/index.css
@@ -69,6 +69,8 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    height: 60vh;
+    padding-top: 3em;
 }
 
 #container-de-descricao>ol {
