Texto da tabela foi centralizado

--- a/semana2/bugfixes/semana-aula1/index.css
+++ b/semana2/bugfixes/semana-aula1/index.css
@@ -69,8 +69,8 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
-    height: 60vh;
-    padding-top: 3em;
+    box-sizing: border-box;
+    padding-top: 70px;
 }
 
 #container-de-descricao>ol {
@@ -101,6 +101,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
