--- a/semana2/bugfixes/semana-aula1/index.css
+++ b/semana2/bugfixes/semana-aula1/index.css
@@ -25,16 +25,12 @@ button:focus {
     color: white;
 }
 
-img {
-    width: 100px;
+table img {
+    width: 50px;
 }
 
 div>p:first-child {
     display: inline;
-}
-
-div img {
-    background: black;
 }
 
 .botao-amarelo {
@@ -56,7 +52,7 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    width: 20px;
 }
 
 
