Bordas do campo de busca arrumadas

--- a/semana2/bugfixes/semana-aula1/index.css
+++ b/semana2/bugfixes/semana-aula1/index.css
@@ -89,6 +89,13 @@ div>p:first-child {
   *  ESTILOS COMPRAR 
   *
   **/
+  
+input {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 2px solid gray;
+}
 
 div:nth-child(2),
 div:last-child {
